tests/semanticDiff-different-topologies-policy-b-with-ipblock/diff_output_from_semanticDiff-different-topologies-policy-a-with-ipblock.txt
Connectivity diff:
diff-type: changed, source: 10.0.0.0-10.10.255.255, destination: default/cog-agents-2[DaemonSet], dir1:  All Connections, dir2: UDP 53
diff-type: changed, source: 10.12.0.0-10.255.255.255, destination: default/cog-agents-2[DaemonSet], dir1:  All Connections, dir2: UDP 53
diff-type: added, source: 0.0.0.0-255.255.255.255, destination: default/cog-agents-5[DaemonSet], dir1:  No Connections, dir2: All Connections, workloads-diff-info: workload default/cog-agents-5[DaemonSet] added
diff-type: added, source: 0.0.0.0-255.255.255.255, destination: default/cog-agents-6[DaemonSet], dir1:  No Connections, dir2: All Connections, workloads-diff-info: workload default/cog-agents-6[DaemonSet] added
diff-type: added, source: 0.0.0.0-9.255.255.255, destination: default/cog-agents-1[DaemonSet], dir1:  No Connections, dir2: All Connections
diff-type: added, source: 10.10.0.0-10.10.255.255, destination: default/cog-agents-1[DaemonSet], dir1:  No Connections, dir2: All Connections
diff-type: added, source: 11.0.0.0-255.255.255.255, destination: default/cog-agents-1[DaemonSet], dir1:  No Connections, dir2: All Connections
diff-type: added, source: default/cog-agents-0[DaemonSet], destination: default/cog-agents-1[DaemonSet], dir1:  No Connections, dir2: All Connections
diff-type: added, source: default/cog-agents-0[DaemonSet], destination: default/cog-agents-5[DaemonSet], dir1:  No Connections, dir2: All Connections, workloads-diff-info: workload default/cog-agents-5[DaemonSet] added
diff-type: added, source: default/cog-agents-0[DaemonSet], destination: default/cog-agents-6[DaemonSet], dir1:  No Connections, dir2: All Connections, workloads-diff-info: workload default/cog-agents-6[DaemonSet] added
diff-type: added, source: default/cog-agents-1[DaemonSet], destination: default/cog-agents-5[DaemonSet], dir1:  No Connections, dir2: All Connections, workloads-diff-info: workload default/cog-agents-5[DaemonSet] added
diff-type: added, source: default/cog-agents-1[DaemonSet], destination: default/cog-agents-6[DaemonSet], dir1:  No Connections, dir2: All Connections, workloads-diff-info: workload default/cog-agents-6[DaemonSet] added
diff-type: added, source: default/cog-agents-2[DaemonSet], destination: default/cog-agents-5[DaemonSet], dir1:  No Connections, dir2: All Connections, workloads-diff-info: workload default/cog-agents-5[DaemonSet] added
diff-type: added, source: default/cog-agents-2[DaemonSet], destination: default/cog-agents-6[DaemonSet], dir1:  No Connections, dir2: All Connections, workloads-diff-info: workload default/cog-agents-6[DaemonSet] added
diff-type: added, source: default/cog-agents-5[DaemonSet], destination: 0.0.0.0-255.255.255.255, dir1:  No Connections, dir2: All Connections, workloads-diff-info: workload default/cog-agents-5[DaemonSet] added
diff-type: added, source: default/cog-agents-5[DaemonSet], destination: default/cog-agents-0[DaemonSet], dir1:  No Connections, dir2: All Connections, workloads-diff-info: workload default/cog-agents-5[DaemonSet] added
diff-type: added, source: default/cog-agents-5[DaemonSet], destination: default/cog-agents-1[DaemonSet], dir1:  No Connections, dir2: All Connections, workloads-diff-info: workload default/cog-agents-5[DaemonSet] added
diff-type: added, source: default/cog-agents-5[DaemonSet], destination: default/cog-agents-6[DaemonSet], dir1:  No Connections, dir2: All Connections, workloads-diff-info: workload default/cog-agents-5[DaemonSet] and default/cog-agents-6[DaemonSet] added
diff-type: added, source: default/cog-agents-6[DaemonSet], destination: 0.0.0.0-255.255.255.255, dir1:  No Connections, dir2: All Connections, workloads-diff-info: workload default/cog-agents-6[DaemonSet] added
diff-type: added, source: default/cog-agents-6[DaemonSet], destination: default/cog-agents-0[DaemonSet], dir1:  No Connections, dir2: All Connections, workloads-diff-info: workload default/cog-agents-6[DaemonSet] added
diff-type: added, source: default/cog-agents-6[DaemonSet], destination: default/cog-agents-1[DaemonSet], dir1:  No Connections, dir2: All Connections, workloads-diff-info: workload default/cog-agents-6[DaemonSet] added
diff-type: added, source: default/cog-agents-6[DaemonSet], destination: default/cog-agents-5[DaemonSet], dir1:  No Connections, dir2: All Connections, workloads-diff-info: workload default/cog-agents-6[DaemonSet] and default/cog-agents-5[DaemonSet] added
diff-type: removed, source: 0.0.0.0-255.255.255.255, destination: default/cog-agents-3[DaemonSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: workload default/cog-agents-3[DaemonSet] removed
diff-type: removed, source: 0.0.0.0-255.255.255.255, destination: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: workload default/cog-local-analyzer-7d77fb55cc[ReplicaSet] removed
diff-type: removed, source: 0.0.0.0-9.255.255.255, destination: default/cog-agents-2[DaemonSet], dir1:  All Connections, dir2: No Connections
diff-type: removed, source: 10.11.0.0-10.11.255.255, destination: default/cog-agents-2[DaemonSet], dir1:  All Connections, dir2: No Connections
diff-type: removed, source: 11.0.0.0-255.255.255.255, destination: default/cog-agents-2[DaemonSet], dir1:  All Connections, dir2: No Connections
diff-type: removed, source: default/cog-agents-0[DaemonSet], destination: default/cog-agents-2[DaemonSet], dir1:  All Connections, dir2: No Connections
diff-type: removed, source: default/cog-agents-0[DaemonSet], destination: default/cog-agents-3[DaemonSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: workload default/cog-agents-3[DaemonSet] removed
diff-type: removed, source: default/cog-agents-0[DaemonSet], destination: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: workload default/cog-local-analyzer-7d77fb55cc[ReplicaSet] removed
diff-type: removed, source: default/cog-agents-1[DaemonSet], destination: default/cog-agents-3[DaemonSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: workload default/cog-agents-3[DaemonSet] removed
diff-type: removed, source: default/cog-agents-1[DaemonSet], destination: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: workload default/cog-local-analyzer-7d77fb55cc[ReplicaSet] removed
diff-type: removed, source: default/cog-agents-2[DaemonSet], destination: default/cog-agents-3[DaemonSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: workload default/cog-agents-3[DaemonSet] removed
diff-type: removed, source: default/cog-agents-2[DaemonSet], destination: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: workload default/cog-local-analyzer-7d77fb55cc[ReplicaSet] removed
diff-type: removed, source: default/cog-agents-3[DaemonSet], destination: 0.0.0.0-255.255.255.255, dir1:  All Connections, dir2: No Connections, workloads-diff-info: workload default/cog-agents-3[DaemonSet] removed
diff-type: removed, source: default/cog-agents-3[DaemonSet], destination: default/cog-agents-0[DaemonSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: workload default/cog-agents-3[DaemonSet] removed
diff-type: removed, source: default/cog-agents-3[DaemonSet], destination: default/cog-agents-2[DaemonSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: workload default/cog-agents-3[DaemonSet] removed
diff-type: removed, source: default/cog-agents-3[DaemonSet], destination: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: workload default/cog-agents-3[DaemonSet] and default/cog-local-analyzer-7d77fb55cc[ReplicaSet] removed
diff-type: removed, source: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], destination: 0.0.0.0-255.255.255.255, dir1:  All Connections, dir2: No Connections, workloads-diff-info: workload default/cog-local-analyzer-7d77fb55cc[ReplicaSet] removed
diff-type: removed, source: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], destination: default/cog-agents-0[DaemonSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: workload default/cog-local-analyzer-7d77fb55cc[ReplicaSet] removed
diff-type: removed, source: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], destination: default/cog-agents-2[DaemonSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: workload default/cog-local-analyzer-7d77fb55cc[ReplicaSet] removed
diff-type: removed, source: default/cog-local-analyzer-7d77fb55cc[ReplicaSet], destination: default/cog-agents-3[DaemonSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: workload default/cog-local-analyzer-7d77fb55cc[ReplicaSet] and default/cog-agents-3[DaemonSet] removed
